<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Red or Black</string>
    <string name="default_string">Default String</string>

    <!--Welcome activity-->
    <string name="textview_warningalcool">Alcohol abuse is dangerous to your health.</string>
    <string name="button_showrules">Rules</string>
    <string name="button_start">Start</string>

    <!-- PlayerSelectionActivitytion Activity-->
    <string name="textview_nbdecks">Number of game decks :</string>
    <string name="button_launchgame">Let\'s get drunk</string>
    <string name="hint_addplayer">Players names</string>
    <string name="emptyplayerlist">Add your name… at least.</string>
    <string name="rules">
        Stage 1 : Bet on card color between Red or Black\n
        Stage 2 : Bet on next card number Greater or Lower than your first card\n
        Stage 3 : Bet on next card number Inside or Outside the interval of your two first cards\n
        Stage 4 : Bet on next card suit between Hearts, Diamonds, Spades or Clubs\n
        Stage 5 : Bet on if you already have next card or not, based only on card values.\n

        If you loose your bet you have to drink as much sips as indicated.\n
        If you win, you can make another player drink these sips.\n
    </string>
    <string name="warnings">
        Red or Black is a friendly game that can be played with friends, family or even alone if your life is sad. \n
        Everyone usually ends up drunk. (Remember that alcohol abuse is dangerous for your health). \n
        Good drinking!
    </string>

    <string name="win">Win !</string>
    <string name="lose">Lost !</string>
    <string name="bojeu">Epic win !</string>
    <string name="drink">Drink %1$d sips</string>
    <string name="give">Give %1$d sips</string>
    <string name="drink1">Drink %1$d sip</string>
    <string name="give1">Give %1$d sip</string>

    <!-- Utils strings -->
    <string name="button_add">+</string>
    <string name="playeralreadyexists">Player already exists.\nPlease choose a different name.</string>
    <string name="level_soft">Pussy</string>
    <string name="level_normal">Normal</string>
    <string name="level_hard">Toper</string>
    <string name="settings_numberofsips">Number of sips</string>
    <string name="settings_numberofsipstaken">Taken</string>
    <string name="settings_numberofsipsgiven">Given</string>
    <string name="settings_phase1">Stage 1</string>
    <string name="settings_phase2">Stage 2</string>
    <string name="settings_phase3">Stage 3</string>
    <string name="settings_phase4">Stage 4</string>
    <string name="settings_phase5">Stage 5</string>
    <string name="yourname">Your Name</string>
    <string name="title_activity_test_drawer">TestDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="historique_de_la_partie">Game logs</string>

    <string name="rules1">Rules 1</string>
    <string name="rules2">Rules 2</string>
    <string name="rules3">Rules 3</string>

    <string name="help_phase1">Choose between Red or Black</string>
    <string name="help_phase2">Is the card value higher? Lower?</string>
    <string name="help_phase3">Is the card value between yours?</string>
    <string name="help_phase4">Spade, Diamond, Heart or Club ?</string>
    <string name="help_phase5">Do you already got this value?</string>
    <string name="statis">Achievements</string>

    <string name="mostdrunk">Player who drank the most :</string>
    <string name="mostdrunkanswer">%1$s (%2$d sips)</string>
    <string name="mostdrunkanswer1">%1$s (%2$d sip)</string>
    <string name="mostgiven">Player who gave the most :</string>
    <string name="mostgivenanswer">%1$s (%2$d sips)</string>
    <string name="mostgivenanswer1">%1$s (%2$d sip)</string>
    <string name="leastdrunk">Player who drank the least :</string>
    <string name="leastdrunkanswer">%1$s (%2$d sips)</string>
    <string name="leastdrunkanswer1">%1$s (%2$d sip)</string>
    <string name="leastgiven">Player who gave the least :</string>
    <string name="leastgivenanswer">%1$s (%2$d sips)</string>
    <string name="leastgivenanswer1">%1$s (%2$d sip)</string>
    <string name="rejouer">Play again</string>
    <string name="random_double">Sips are dubbed for this turn !!</string>
    <string name="random_event_frequency">Random event frequency :</string>
    <string name="tuto1">Add all the players to the list, and you\'re ready to drunk</string>
    <string name="tuto2">Choose successively between :\n
    -Red or Black\n
    -More, Less or Equals \n
    -In, Out or Equals\n
    -Spade, Heart, Club or Diamond\n
    -I got it or I don\'t (values only)</string>
    <string name="tuto3">Beware ! Random events can occur to beef up punishments</string>

    <string name="longtaptodel">Long tap to delete a player</string>
</resources>
