<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/parchmentmini"
    tools:context="com.stl.tpalt.redorblack.activities.SettingsActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <!--TITLE-->
        <TextView
            android:id="@+id/tv_stats"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statis"
            android:gravity="center"
            android:padding="20dp"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/mostdrunk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mostdrunk"
            android:textSize="@dimen/settings_titles"
            app:layout_constraintTop_toBottomOf="@id/tv_stats"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/mostdrunkanswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/mostdrunkanswer"
            android:textSize="@dimen/settings_titles"
            app:layout_constraintTop_toBottomOf="@id/mostdrunk"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/mostgiven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mostgiven"
            android:textSize="@dimen/settings_titles"
            app:layout_constraintTop_toBottomOf="@id/mostdrunkanswer"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/mostgivenanswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/mostgivenanswer"
            android:textSize="@dimen/settings_titles"
            app:layout_constraintTop_toBottomOf="@id/mostgiven"
            app:layout_constraintRight_toRightOf="parent"/>
<TextView
            android:id="@+id/leastdrunk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leastdrunk"
            android:textSize="@dimen/settings_titles"
            app:layout_constraintTop_toBottomOf="@id/mostgivenanswer"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/leastdrunkanswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/leastdrunkanswer"
            android:textSize="@dimen/settings_titles"
            app:layout_constraintTop_toBottomOf="@id/leastdrunk"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/leastgiven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leastgiven"
            android:textSize="@dimen/settings_titles"
            app:layout_constraintTop_toBottomOf="@id/leastdrunkanswer"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/leastgivenanswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:text="@string/leastgivenanswer"
            android:textSize="@dimen/settings_titles"
            app:layout_constraintTop_toBottomOf="@id/leastgiven"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/stats_replay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/rejouer"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>