<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.stl.tpalt.redorblack.activities.WelcomeActivity"
    android:background="@drawable/parchmentmini">

    <include
        layout="@layout/settings_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_start"
        android:src="@drawable/logo"
        android:contentDescription="Displaying the logo"
        tools:ignore="HardcodedText"/>

    <TextView
        android:id="@+id/warning_alcool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_warningalcool"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="15dp"
        />
    <Button
        android:id="@+id/button_regles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_showrules"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintBottom_toTopOf="@id/warning_alcool"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_start"/>

    <Button
        android:id="@+id/button_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_start"
        android:layout_marginLeft="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintBottom_toTopOf="@id/button_regles"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>
